@@ -4,7 +4,11 @@
     ],
     "extends": "plugin:wdio/recommended",
     "env": { "es6": true },
-  "parserOptions": {
-      "sourceType": "module"
-  } 
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+      }
+    } 
   }
