@@ -1,0 +1,21 @@
+import SearchResults from './components/SearchResults';
+import ModalComponent from './components/ModalComponent';
+import BasePage from './BasePage';
+
+const TimelineReporter = require('wdio-timeline-reporter').default;
+
+class CommonPage extends BasePage {
+
+
+    get searchResults(){
+        return SearchResults;
+    }
+
+    get modalComponent(){
+        return ModalComponent;
+    }
+
+   
+}
+
+export default CommonPage;
