@@ -1,1 +1,2 @@
 wdio-0-0-timeline-reporter.log
+wdio-0-0-timeline-reporter.log
